tests/src/frontend/typechecking/invalid/child_without_base.sk
class Foo() {
  children =
  | Bar
  | Baz
}
